<resources>
    <string name="app_name">E-Games Store</string>
    <string name="internet_error">Internet connection error!</string>
    <string name="share_with">Share with</string>
    <string name="hello">Hello,</string>
    <string name="order_place">Order Placed Successfully.</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="my_order_title">MY ORDER</string>
    <string name="order_id">Order Id</string>
    <string name="offerpricedot">Offer Price : </string>
    <string name="order_qty">Qty</string>
    <string name="date">Date</string>
    <string name="view_details">View Details</string>
    <string name="order_status">STATUS</string>
    <string name="feed_back">FEEDBACK</string>
    <string name="track_order">TRACK ORDER</string>
    <string name="my_orders">Orders</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="comment">Comments</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="close_btn">CLOSE</string>
    <string name="not_order_alert">Your order not shipped yet</string>
    <string name="your_name">Your Name</string>
    <string name="enter_name">Please enter name</string>
    <string name="comment_message">Please enter message</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="done_btn">DONE</string>
    <string name="product_name">Product Name</string>
    <string name="gift_name">Gift Name</string>
    <string name="order">Order Id</string>
    <string name="price">Price</string>
    <string name="delivery_charge">Delivery Charges</string>
    <string name="grand_total">Grand Total</string>
    <string name="quantity">Quantity</string>
    <string name="free_qty">Free Quantity Included</string>
    <string name="di_color">Color</string>
    <string name="not_availabel">Not available</string>
    <string name="ship_address">Shipping Address</string>
    <string name="left_eye">Left Eye Power</string>
    <string name="right_eye">Right Eye Power</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="di_full_name">Full Name</string>
    <string name="di_area">Area</string>
    <string name="di_block">Block</string>
    <string name="di_street">Street</string>
    <string name="di_house">House/Building</string>
    <string name="di_flat">Flat Number</string>
    <string name="di_phone">Phone Number</string>
    <string name="di_paci">PACI Number</string>
    <string name="di_comment">Comments</string>
    <string name="current_location">Current Location</string>
    <string name="order_date">Order Date</string>
    <string name="di_order_status">Order Status</string>
    <string name="payment_status">Payment Status</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="coupon_price">Coupon Price</string>
    <string name="free_quantity">Free Quantity</string>
    <string name="offer_name">Offer Name</string>
    <string name="loyal_point">Received loyalty Points</string>
    <string name="get">Get</string>
    <string name="get_point">Loyalty points after payment</string>
    <string name="paid">Paid loyalty Points</string>
    <string name="pty_success">Success</string>
    <string name="please_select_payment_method">Please Select Payment Method:</string>
    <string name="please_enter_payment_amount">Please Enter Payment Amount:</string>
    <string name="todo">TODO</string>
    <string name="amount">0.100</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_title">CONTACT US</string>
    <string name="title_home">Home</string>
    <string name="navigation_favourite">Wishlist</string>
    <string name="navigation_offers">Deals</string>
    <string name="navigation_my_accout">My Account</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_contact">Contact Us</string>
    <string name="nav_header">sign in / sign up</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="category">Categories</string>
    <string name="term_and_condition">Terms &amp; Conditions</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ\'s</string>
    <string name="rate">Rate Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="lan_yes">نعم</string>
    <string name="lan_no">لا</string>
    <string name="lan_message">هل تريد حقًا تغيير اللغة؟</string>
    <string name="lan_alert">تنبيه</string>
    <string name="select_language">Please select your language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="select_country">Please select your country</string>
    <string name="apply_button">Apply</string>
    <string name="arabic_apply_button">تطبيق</string>
    <string name="category_text">Categories</string>
    <string name="title_text_view">Terms &amp; Conditions</string>
    <string name="about_us_title_text_view">About Us</string>
    <string name="loyalty_title_text_view">Loyalty Points</string>
    <string name="loyalty_point">Available Loyalty Points</string>
    <string name="loyalty_point_need">You need minimum</string>
    <string name="loyalty_point_for">point for purchase products with points.</string>
    <string name="faq_title_text_view">FAQ\'s</string>
    <string name="add_new_address_title_text_view">CHECKOUT</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="step2">STEP 2/4</string>
    <string name="new_address">NEW ADDRESS</string>
    <string name="share_location">Share Location</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">Enter Full Name</string>
    <string name="current">Current</string>
    <string name="current_location_hint">Current Location</string>
    <string name="current_lat">Current Latitude</string>
    <string name="current_lat_hint">Current Latitude</string>
    <string name="current_long">Current Longitude</string>
    <string name="current_long_hint">Current Longitude</string>
    <string name="area">Area</string>
    <string name="area_hint">Area</string>
    <string name="block">Block</string>
    <string name="block_hint">Block</string>
    <string name="street">Street</string>
    <string name="street_hint">Street</string>
    <string name="avenue">Avenue</string>
    <string name="avenue_hint">Avenue</string>
    <string name="house">House/Building </string>
    <string name="house_hint">House/Building</string>
    <string name="floor">Floor Number</string>
    <string name="floor_hint">Floor Number</string>
    <string name="flat">Flat Number</string>
    <string name="flat_hint">Flat Number</string>
    <string name="phone_number">Phone Number *</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="paci_number">PACI Number</string>
    <string name="paci_number_hint">PACI Number</string>
    <string name="comments">Comments</string>
    <string name="comments_hint">Comments</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="toast_message_name">Please enter name</string>
    <string name="please_select_addresstype">Please select address type</string>
    <string name="toast_massage_mobile">Please enter mobile with correct format</string>
    <string name="toast_message_area">Please enter area name</string>
    <string name="toast_message_block">Please enter block</string>
    <string name="toast_message_street">Please enter street</string>
    <string name="toast_message_house">Please enter house number</string>
    <string name="toast_floor">Please enter floor number</string>
    <string name="toast_flat">Please enter flat number</string>
    <string name="update_address">Update Address</string>
    <string name="title_brand">Brands</string>
    <string name="change_password_title">Change password</string>
    <string name="old_password">Old Password*</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_password">Confirm New Password*</string>
    <string name="update_button">UPDATE</string>
    <string name="toast_message_old_pass">Please enter old password</string>
    <string name="toast_message_new_pass">Please enter new password</string>
    <string name="toast_message_con_pass">Please confirm password</string>
    <string name="toast_message_not_match">Password didn\'t match!</string>
    <string name="check_out_title">CHECKOUT</string>
    <string name="edit_devivery_address">EDIT DELIVERY ADDRESS</string>
    <string name="check_out_shipping_address">Shipping Address</string>
    <string name="check_out_step">STEP 2/4</string>
    <string name="check_out_new_address">ADD NEW ADDRESS</string>
    <string name="check_out_sub_total">SUB TOTAL :</string>
    <string name="continue_to_payment">Continue to payment</string>
    <string name="alert_message">ALERT</string>
    <string name="select_any_one_address">Please select an address or add new address</string>
    <string name="collection_title">COLLECTIONS</string>
    <string name="edit_profile_title">EDIT PROFILE</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="number">Number</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="profile_update_button">UPDATE</string>
    <string name="cancle">Cancel</string>
    <string name="dialog_select_country">Select country....</string>
    <string name="toast_message_profile_name">Please enter name</string>
    <string name="toast_message_country_code">Please select country code</string>
    <string name="toast_message_number">Please enter number</string>
    <string name="filter_title">Filter</string>
    <string name="clear_all">clear all</string>
    <string name="apply_filter_button">Apply Filter</string>
    <string name="reset_pass">To Reset your password enter the email address your use to sign in to Egames  </string>
    <string name="email_id_hint">Enter Email ID</string>
    <string name="reset_password_button">RESET PASSWORD</string>
    <string name="toast_message_forgot_email">Please Enter Email ID</string>
    <string name="login_title">login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_pass_hint">Password</string>
    <string name="cart_title">Cart</string>
    <string name="payment_option_text">Product you have in cart does not require delivery, codes can be shared digitally via WhatsApp/Email/Notification</string>
    <string name="sharecodeonwhatsapp">Share code Digitally</string>
    <string name="pleasedeliverit">Please deliver it</string>
    <string name="buy_cart_alert">Alert</string>
    <string name="edit">EDIT</string>
    <string name="address_type">Address Type : </string>
    <string name="delete">DELETE</string>
    <string name="user_billing_full_name">Full Name :</string>
    <string name="user_billing_area">Area :</string>
    <string name="user_billing_block">Block :</string>
    <string name="user_billing_street">Street :</string>
    <string name="user_billing_avenue">Avenue :</string>
    <string name="user_billing_house">House/Building :</string>
    <string name="user_billing_floor">Floor Number :</string>
    <string name="user_billing_flat">Flat Number :</string>
    <string name="user_billing_phone">Phone Number :</string>
    <string name="user_billing_paci">PACI Number :</string>
    <string name="user_billing_comment">Comments :</string>
    <string name="user_billing_current_loaction">Current Location :</string>
</resources>