<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/border_shadow_home_select"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futuramediumbt"
            android:layout_gravity="center"
            android:text="@string/buy_cart_alert"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"/>

        <TextView
            android:id="@+id/item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futuralight"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/payment_option_text"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_margin="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/dark_gry"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/shareCodeOnWhatsApp_text_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/futuramediumbt"
                android:gravity="center"
                android:text="@string/sharecodeonwhatsapp"
                android:textAllCaps="false"
                android:textColor="@color/select_item_color"
                android:textSize="@dimen/_12sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gry"/>
            <TextView
                android:id="@+id/pleaseDeliverIt_text_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/futuramediumbt"
                android:gravity="center"
                android:text="@string/pleasedeliverit"
                android:textAllCaps="false"
                android:textColor="@color/select_item_color"
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/futuramediumbt"
        android:gravity="center"
        android:text="@string/cancle"
        android:background="@drawable/border_shadow_home_select_white"
        android:layout_margin="@dimen/_5sdp"
        android:textAllCaps="false"
        android:textColor="@color/select_item_color"
        android:textSize="@dimen/_12sdp"/>

</LinearLayout>