<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_10sdp"
    android:background="#423f55"
    android:layout_marginEnd="@dimen/_10sdp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_6sdp"
        android:background="#696673"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/edit_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:tint="@color/white"
                android:src="@drawable/pencil"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/futuramediumbt"
                android:textAllCaps="true"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">
            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:tint="@color/white"
                android:src="@drawable/delete"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textAllCaps="true"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/select_layour"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:gravity="end"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/redia_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_17sdp"
                android:layout_gravity="end"
                android:buttonTint="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/white"/>


    <LinearLayout
        android:id="@+id/address_lay"
        android:layout_width="match_parent"
        android:padding="@dimen/_3sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_type"
                android:textColor="@color/white"
                android:fontFamily="@font/futuramediumbt"
                android:textSize="@dimen/_11sdp"
                ></TextView>

            <TextView
                android:id="@+id/addressTypeTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/futuramediumbt"
                android:textSize="@dimen/_11sdp"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_full_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_area"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/area_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_block"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/block_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_street"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/street_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_av"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_avenue"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/avenue_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_house"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/house_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_fl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_floor"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/floor_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_fa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_flat"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/flat_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_phone"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/phone_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_pa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_paci"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/paci_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_layout_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_comment"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/comment_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cur_location_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/user_billing_current_loaction"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
            <TextView
                android:id="@+id/current_location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>